# tx-soil-moisture

./: .gitignore  .gitmodules  All Visualization.ipynb  Detailed-Question-1.ipynb  Detailed-Question-2.ipynb  LICENSE  LoadData.ipynb  Q4.ipynb  README.md  Sat_SM_AMSR_station1_24_6_loss_history.csv  Sat_SM_AMSR_station1_24_6_model_results.csv  Sat_SM_SMAP_48_12_model_results.csv  Srad_Temperature.ipynb  Students.md  Temperature_Soil_Moisture_Research_Plan.ipynb  WrongData_MET.ipynb  auto_arima.py  feature_combination_results.csv  feature_importance_results.csv  model_results.csv  model_results1.csv  rain_event_metrics.csv  run_experiments.sh  sarima_metrics_baseline.py  script.py  swc-nb.ipynb  tatus  wrong_data_SM.ipynb
new-code/: Makefile  README  README.md  pyproject.toml  requirements.txt
new-code/helpers/: constants.py  data_helpers.py  data_loader.py  feature_engineering.py  model_helpers.py  plotting.py
new-code/helpers/models/: arima_helpers.py  evaluation_helpers.py  lstm_helpers.py
new-code/misc/tree/: tree_ignore.txt
new-code/notebook/: CNN_model.keras  Optimized_LSTM_model.keras  Simple_LSTM_model.keras  chris-exploration.ipynb  exploration.ipynb  forecasting.ipynb  model1.keras  modeling.ipynb  multiple_models.ipynb  residual_test_modeling.ipynb  single_model.ipynb
new-code/results/run_20250210_142349/: model1.keras
new-code/results/run_20250210_143049/: model1.keras
new-code/results/run_20250210_144030/: CNN_checkpoint.keras  Optimized_LSTM_checkpoint.keras  (+2 more)
new-code/scripts/: v1-script.py  v2-script.py
new-code/src/: main.py  runner.py
(+3102 files in other folders)
